src/test/ui/associated-types/impl-wf-cycle-1.stderr
error[E0282]: type annotations needed
  --> $DIR/impl-wf-cycle-1.rs:28:12
   |
LL |     let x: <(_,) as Grault>::A = ();
   |            ^^^^^^^^^^^^^^^^^^^ cannot infer type for type parameter `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
